fix colophon z-index

--- a/css/theme/source/custom.scss
+++ b/css/theme/source/custom.scss
@@ -158,6 +158,7 @@ body {
   font-style: italic;
   font-size: 26px;
   letter-spacing: .0625em;
+  z-index: 1;
 }
 
 code {
